# picolibc

./: .gitignore  Makefile  Makefile.am  README  configure.ac  mem.c  printf.c
include/: io.h  mem.h  string.h  syscall.h  types.h
src/: Makefile.am  io.c  mem.c  string.c
src/asm/: start.S
src/internal/: syscall.c  syscall_int.h
tests/: Makefile.am  printf.c
